@@ -1,3 +1,8 @@
+2011-05-30 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/CFString.c: Added CFStringNormalize and CFStringTransform.
+	* Source/NSCFString.m: Return CFString's type ID.
+
 2011-05-29 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/NSCFString.m: Add NSCFString class.
